--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
+*{
+	margin:0;
+}
+
 html, body{
+   	height:100%;
+}
+
+body{
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color:#777777;
 	background-color: #eee;
-	margin:0;
-   	padding:0;
-   	height:100%;
 }
 
 a{
@@ -81,16 +86,6 @@ p{
 	padding-left: 10px;
 }
 
-.myFooter{
-	background-color: #666;
-	border-top: thick solid #4aaaa5;
-	text-align: center;
-	position:fixed;
-   	bottom:0;
-   	width:100%;
-   	height:40px;   /* Height of the footer */
-}
-
 .myHeader{
 	position:relative;
 	height:80px;
@@ -131,7 +126,6 @@ p{
 	width:960px;
 	margin-bottom: 20px;
 	margin-top: 20px;
-	padding-bottom:40px;   /* Height of the footer */
 }
 
 .sideSection{
@@ -149,10 +143,22 @@ p{
 	margin-bottom:20px;
 }
 
-.siteContainer{
-	min-height:100%;
-	height:100%;
-   	position:relative;
+.wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -45px; 
+}
+
+.myFooter, .wrap:after {
+  height: 40px; 
+}
+
+.myFooter{
+	background-color: #666;
+	border-top-style: solid;
+    border-top-width: 5px;
+    border-top-color: #4aaaa5;
+	text-align: center;
 }
 
 #profileImage{
