--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,13 +49,14 @@ p{
 	position:absolute;
 	left:0;
 	right:0;
+	top:0;
+	bottom:0;
 	margin:auto;
 	width:90%;
-	height: 100%;
-	background:white;
+	height: 95%;
 }
 
-.cardBanner{
+/*.cardBanner{
 	position:absolute;
 	margin:auto;
 	bottom:10px;
@@ -65,19 +66,19 @@ p{
 	background-color: #4aaaa5;
 	color:#fff;
 	text-align: center;
-}
+}*/
 
 .cardImage{
-	position: absolute;
+	position:absolute;
 	left:0;
 	right:0;
 	top:0;
-	bottom: 0;
+	bottom:0;
 	margin:auto;
-	height: auto;
-	max-height: 95%;
-	width:auto;
 	max-width: 100%;
+    max-height: 100%;
+    border-radius:4px;
+	box-shadow: 5px 5px 15px #888;
 }
 
 .clearFix:after{
@@ -107,10 +108,22 @@ p{
 	height: 50px;
 }
 
+.imageWrapper{
+	position:absolute;
+	top:0;
+	bottom: 0;
+	left:0;
+	right: 0;
+	margin: auto;
+	height: auto;
+	width:auto;
+}
+
 .mainSection{
 	float:left;
 	width:650px;
 	background-color: #ffffff;
+	border: 2px solid #ddd;
 }
 
 .mainSectionContainer{
@@ -200,6 +213,7 @@ p{
 	float:right;
 	width:270px;
 	background-color: #ffffff;
+	border: 2px solid #ddd;
 } 
 
 .sideSectionContainer{
