--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,10 @@ html, body{
 }
 
 body{
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 20px;
 	color:#777777;
-	background-color: #eee;
+	background-image: url("../images/whirlpool.png");
 }
 
 a{
@@ -19,7 +19,7 @@ a{
 }
 
 h1, h2, h3, h4, h5, h6{
-	font-family: "Georgia", "Times", "Times New Roman", "serif";
+	font-family: Georgia, Times, "Times New Roman", serif;
 	color:#4aaaa5;
 }
 
@@ -37,7 +37,7 @@ h3{
 }
 
 header{
-	border-bottom: thick solid #ccc;
+	border-bottom: 2px solid #ccc;
 }
 
 p{
@@ -136,10 +136,10 @@ p{
 }
 
 .menuLink{
-	font-size:25px;
+	font-size:20px;
 	display: table-cell;
 	vertical-align: middle;
-	padding-left: 10px;
+	padding-left: 15px;
 }
 
 .myFormElement{
@@ -239,11 +239,11 @@ p{
 .wrap {
   min-height: 100%;
   /* equal to footer height */
-  margin-bottom: -45px; 
+  margin-bottom: -65px; 
 }
 
 .myFooter, .wrap:after {
-  height: 40px; 
+  height: 60px; 
 }
 
 .myFooter{
