--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,26 +47,32 @@ p{
 
 .card{
 	position:absolute;
-	left:0;
-	right:0;
-	top:0;
-	bottom:0;
-	margin:auto;
 	width:90%;
-	height: 95%;
+	height:90%;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	box-shadow: 5px 5px 10px #888;
+	background-color: #eee;
+	border-radius: 5px;
 }
 
-/*.cardBanner{
+.cardBanner{
 	position:absolute;
-	margin:auto;
-	bottom:10px;
-	padding-top:15px;
-	padding-bottom: 15px;
+	left:0;
+	right:0;
+	top:55%;
+	margin: auto;
+	padding-top: 12px;
+	padding-bottom: 12px;
 	width:100%;
 	background-color: #4aaaa5;
 	color:#fff;
+	font-size: 18px;
 	text-align: center;
-}*/
+}
 
 .cardImage{
 	position:absolute;
@@ -74,11 +80,9 @@ p{
 	right:0;
 	top:0;
 	bottom:0;
-	margin:auto;
-	max-width: 100%;
-    max-height: 100%;
-    border-radius:4px;
-	box-shadow: 5px 5px 15px #888;
+	margin: auto;
+	max-width:100%;
+	max-height:100%;
 }
 
 .clearFix:after{
@@ -109,14 +113,14 @@ p{
 }
 
 .imageWrapper{
-	position:absolute;
-	top:0;
-	bottom: 0;
-	left:0;
+	position: absolute;
+	left: 0;
 	right: 0;
+	top: 0;
+	bottom: 0;
 	margin: auto;
-	height: auto;
-	width:auto;
+	width: 100%;
+	height: 94%;
 }
 
 .mainSection{
@@ -185,7 +189,9 @@ p{
 
 .myTable{
 	position:relative;
-	height:100%;
+	left: 0;
+	right: 0;
+	margin: auto;
 	width:100%;
 }
 
@@ -196,7 +202,6 @@ p{
 
 .myTr{
 	position:relative;
-	width:100%;
 }
 
 .normalContainer{
@@ -232,8 +237,10 @@ p{
 
 .tableContainer{
 	position:relative;
+	left: 0;
+	right: 0;
+	margin: auto;
 	width:100%;
-	height:100%;
 }
 
 .wrap {
